--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -170,7 +170,7 @@ ul li a:hover {
 }
 </style>
 
-## Peer-reviewed conference and journal papers
+<h2>Peer-reviewed conference and journal papers</h2>
 
 <div class="section">
 <h3>2025</h3>
@@ -384,7 +384,7 @@ ul li a:hover {
         <div class="publication-authors"><strong>Denghui Zhang</strong>, Hao Zhong, Jingyuan Yang</div>
         <div class="publication-venue">CIST'22: INFORMS Conference On Information Systems And Technology (Submitted to Information Systems Research)</div>
         <div class="publication-year">2022</div>
-        <div class="links"><a href="{{ site.baseurl }}/publications/M_A_sample_denghui.pdf" target="_blank">[PDF]</a> <a href="#">[CM]</a> <a href="#">[GL]</a></div>
+        <div class="links"><a href="{{ '/publications/M_A_sample_denghui.pdf' | relative_url }}" target="_blank">[PDF]</a> <a href="#">[CM]</a> <a href="#">[GL]</a></div>
     </div>
 </div>
 
@@ -421,7 +421,7 @@ ul li a:hover {
         <div class="publication-authors"><strong>Denghui Zhang</strong>, Zixuan Yuan, Yanchi Liu, Hao Liu, Fuzhen Zhuang, Hui Xiong, Haifeng Chen</div>
         <div class="publication-venue">KDD'21: Proceedings of the 27th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (15.4% acceptance rate)</div>
         <div class="publication-year">2021</div>
-        <div class="links"><a href="{{ site.baseurl }}/publications/KDD21.pdf" target="_blank">[PDF]</a> <a href="#">[TM]</a> <a href="#">[EM]</a></div>
+        <div class="links"><a href="{{ '/publications/KDD21.pdf' | relative_url }}" target="_blank">[PDF]</a> <a href="#">[TM]</a> <a href="#">[EM]</a></div>
     </div>
 </div>
 
@@ -432,7 +432,7 @@ ul li a:hover {
         <div class="publication-authors">Zixuan Yuan, Hao Liu, Renjun Hu, <strong>Denghui Zhang</strong>, Hui Xiong</div>
         <div class="publication-venue">AAAI'21: Proceedings of the 35th AAAI Conference on Artificial Intelligence</div>
         <div class="publication-year">2021</div>
-        <div class="links"><a href="#">[FT]</a> <a href="{{ site.baseurl }}/publications/Corporate_Profiling__AAAI_2021.pdf" target="_blank">[PDF]</a> <a href="https://github.com/yuanzx33033/SePaL" target="_blank">[code]</a></div>
+        <div class="links"><a href="#">[FT]</a> <a href="{{ '/publications/Corporate_Profiling__AAAI_2021.pdf' | relative_url }}" target="_blank">[PDF]</a> <a href="https://github.com/yuanzx33033/SePaL" target="_blank">[code]</a></div>
     </div>
 </div>
 </div>
@@ -447,7 +447,7 @@ ul li a:hover {
         <div class="publication-authors"><strong>Denghui Zhang</strong>, Yanchi Liu, Wei Cheng, Bo Zong, Jingchao Ni, Zhengzhang Chen, Haifeng Chen, Hui Xiong</div>
         <div class="publication-venue">ICDM'20: 2020 IEEE International Conference on Data Mining</div>
         <div class="publication-year">2020</div>
-        <div class="links"><a href="{{ site.baseurl }}/publications/ICDM20.pdf" target="_blank">[PDF]</a> <a href="#">[SA]</a></div>
+        <div class="links"><a href="{{ '/publications/ICDM20.pdf' | relative_url }}" target="_blank">[PDF]</a> <a href="#">[SA]</a></div>
     </div>
 </div>
 
@@ -499,7 +499,7 @@ ul li a:hover {
         <div class="publication-authors"><strong>Denghui Zhang</strong>, Manling Li, Pengshan Cai, Yantao Jia, Yuanzhuo Wang, Xueqi Cheng</div>
         <div class="publication-venue">AAAI 2018: Proceedings of the 32nd AAAI Conference on Artificial Intelligence (abstract paper)</div>
         <div class="publication-year">2018</div>
-        <div class="links"><a href="{{ site.baseurl }}/publications/PAN.pdf" target="_blank">[PDF]</a> <a href="#">[TM]</a></div>
+        <div class="links"><a href="{{ '/publications/PAN.pdf' | relative_url }}" target="_blank">[PDF]</a> <a href="#">[TM]</a></div>
     </div>
 </div>
 </div>
@@ -514,7 +514,7 @@ ul li a:hover {
         <div class="publication-authors"><strong>Denghui Zhang</strong>, Manling Li, Yantao Jia, Yuanzhuo Wang, Xueqi Cheng</div>
         <div class="publication-venue">WI 2017: Proceedings of IEEE/WIC/ACM International Conference on Web Intelligence</div>
         <div class="publication-year">2017</div>
-        <div class="links"><a href="{{ site.baseurl }}/publications/ParTransX.pdf" target="_blank">[PDF]</a> <a href="https://github.com/zdh2292390/ParTrans-X" target="_blank">[code]</a></div>
+        <div class="links"><a href="{{ '/publications/ParTransX.pdf' | relative_url }}" target="_blank">[PDF]</a> <a href="https://github.com/zdh2292390/ParTrans-X" target="_blank">[code]</a></div>
     </div>
 </div>
 </div>
@@ -580,3 +580,4 @@ ul li a:hover {
         }
     });
 </script>
+
