--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,170 +7,9 @@ redirect_from:
   - /publications.html
 ---
 
-<style>
-.publication {
-    margin-bottom: 25px;
-    padding: 20px;
-    border-left: 4px solid #3498db;
-    background-color: #f8f9fa;
-    display: flex;
-    align-items: flex-start;
-    gap: 20px;
-}
-.publication-image {
-    flex-shrink: 0;
-    width: 150px;
-    height: 150px;
-    border-radius: 8px;
-    object-fit: contain;
-    border: 2px solid #e9ecef;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-    background-color: #f8f9fa;
-}
-.publication-image:hover {
-    transform: scale(1.05);
-}
-.publication-content {
-    flex: 1;
-}
-.publication-title {
-    font-weight: bold;
-    color: #2c3e50;
-    margin-bottom: 8px;
-    font-size: 1.1em;
-}
-.publication-authors {
-    color: #7f8c8d;
-    margin-bottom: 8px;
-    font-size: 0.95em;
-}
-.publication-venue {
-    color: #e74c3c;
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-.publication-year {
-    color: #95a5a6;
-    font-style: italic;
-}
-.section {
-    margin-bottom: 40px;
-}
-.section h3 {
-    color: #2c3e50;
-    border-bottom: 2px solid #3498db;
-    padding-bottom: 5px;
-    margin-bottom: 20px;
-    font-size: 1.4em;
-}
-.links {
-    margin-top: 8px;
-}
-.links a {
-    color: #3498db;
-    text-decoration: none;
-    margin-right: 15px;
-    font-size: 0.9em;
-}
-.links a:hover {
-    text-decoration: underline;
-}
-h2 {
-    color: #2c3e50;
-    border-bottom: 2px solid #3498db;
-    padding-bottom: 10px;
-    margin-top: 40px;
-    margin-bottom: 20px;
-}
-ul {
-    margin-left: 20px;
-    margin-bottom: 30px;
-}
-ul li {
-    margin-bottom: 10px;
-    line-height: 1.6;
-}
-ul li a {
-    color: #3498db;
-    text-decoration: none;
-}
-ul li a:hover {
-    text-decoration: underline;
-}
-/* Modal styles */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.8);
-    animation: fadeIn 0.3s ease;
-}
-.modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 90%;
-    max-height: 90%;
-    background-color: white;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.3);
-    animation: zoomIn 0.3s ease;
-}
-.modal-image {
-    max-width: 100%;
-    max-height: 80vh;
-    border-radius: 8px;
-    display: block;
-    margin: 0 auto;
-}
-.close {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 30px;
-    font-weight: bold;
-    color: #aaa;
-    cursor: pointer;
-    z-index: 1001;
-}
-.close:hover {
-    color: #000;
-}
-@keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-@keyframes zoomIn {
-    from { transform: translate(-50%, -50%) scale(0.8); }
-    to { transform: translate(-50%, -50%) scale(1); }
-}
-@media (max-width: 768px) {
-    .publication {
-        flex-direction: column;
-        text-align: center;
-    }
-    .publication-image {
-        width: 120px;
-        height: 120px;
-        margin: 0 auto;
-    }
-    .modal-content {
-        max-width: 95%;
-        padding: 15px;
-    }
-    .modal-image {
-        max-height: 70vh;
-    }
-}
-</style>
+<link rel="stylesheet" href="{{ '/assets/css/publications.css' | relative_url }}">
 
+<div class="publications-page">
 <h2>Peer-reviewed conference and journal papers</h2>
 
 <div class="section">
@@ -581,4 +420,5 @@ ul li a:hover {
         }
     });
 </script>
+</div>
 
